crear y asignar doctor